[package]
name = "widget_simulator"
version = "0.1.0"
edition = "2024"

[features]
prefill-words = []

[dependencies]
frostsnap_widgets = { workspace = true, features = ["std"] }
frostsnap_core.workspace = true
embedded-graphics.workspace = true
embedded-graphics-simulator = "0.8.0"
rand.workspace = true
bitcoin.workspace = true
frost_backup.workspace = true
