[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1.82.6"
frostsnap_coordinator = { workspace = true }
lazy_static = "1.4"
tracing-subscriber = "0.3"
tracing = { workspace = true, features = ["std"] }
tracing-android = "0.2"
llsdb.workspace = true
bincode.workspace = true
bdk_chain = {  version = "0.15", features = ["serde"] }
bdk_electrum = {  version = "0.14" }
bdk_coin_select = { version = "0.3" }

# TODO: use espflash as a library to do the build
# [build-dependencies]
# espflash = "3"

[features]
default = []
no_build_firmware = []
