[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1.82.6"
frostsnap_coordinator = { workspace = true }
lazy_static = "1.4"
tracing-subscriber = { version = "0.3" }
tracing = { workspace = true, features = ["std"] }
tracing-android = "0.2"
bincode.workspace = true
bardecoder = "0.5.0"
bitcoin.workspace = true
image = "0.24"
ur = { git = "https://github.com/nickfarrow/ur-rs", rev = "2e267e5e019b6c8129f66efba00327ff3d0ae5a4" }
rusqlite = "0.31.0"
sha2.workspace = true
rand = "0.8"
time = { version = "0.3.36", features = ["formatting"] }

# TODO: use espflash as a library to do the build
# [build-dependencies]
# espflash = "3"

[features]
default = []
